<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">My Nanodegree Apps!</string>
    <string name="main_spotify_streamer">Popular Movies</string>
    <string name="main_football_score_app">Football Scores App</string>
    <string name="main_library_app">Library App</string>
    <string name="main_build_it_bigger">Build It Bigger</string>
    <string name="main_xyz_reader">XYZ Reader</string>
    <string name="main_capstone">Capstone</string>
    <string name="title_activity_movies">Pop Movies</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_movie_loading_title">Loading</string>
    <string name="fragment_movie_loading_message">Loading Movies Data</string>
    <string name="content_desc_poster">poster image</string>
    <string name="settings_sort_by_popularity">Sort by popularity</string>
    <string name="settings_sort_by_ratings">Sort by ratings</string>
    <string name="movie_detail">Movie Detail</string>
    <string name="hello_world">Hello World</string>
    <string name="rating_unit">%1$s/10</string>
    <string name="detail_trailers_title">Trailers:</string>
    <string name="detail_loading_message">Loading Data</string>
    <string name="mark_as_favorite">mark_as_favorite</string>
    <string name="reviews">reviews</string>
    <string name="title_activity_review">Reviews</string>
    <string name="settings_sort_by_favorite">Sort by favorite</string>
    <string name="movie_detail_share">Share</string>
    <string name="movie_show_favorite">Show favorite</string>
    <string name="my_favorite">My Favorites</string>
</resources>
