<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/show_favorite"
        android:title="@string/movie_show_favorite"
        app:showAsAction="ifRoom" />
    <group android:id="@+id/sort_group"
        android:checkableBehavior="single">
        <item android:id="@+id/sort_by_popular"
            android:checked="true"
            android:title="@string/settings_sort_by_popularity"
            app:showAsAction="never" />
        <item android:id="@+id/sort_by_rated"
            android:title="@string/settings_sort_by_ratings"
            app:showAsAction="never" />
        <item android:id="@+id/sort_by_favorite"
            android:title="@string/settings_sort_by_favorite"
            app:showAsAction="never" />
    </group>
</menu>