<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_title"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title" />

    <Button
        android:id="@+id/main_spotify_streamer"
        android:textColor="@color/white"
        android:layout_below="@id/main_title"
        android:layout_marginTop="40dp"
        android:padding="20dp"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:text="@string/main_spotify_streamer"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/main_football_score_app"
        android:textColor="@color/white"
        android:layout_below="@id/main_spotify_streamer"
        android:layout_marginTop="15dp"
        android:padding="20dp"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:text="@string/main_football_score_app"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/main_library_app"
        android:textColor="@color/white"
        android:padding="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/main_library_app"
        android:layout_below="@id/main_football_score_app"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/main_build_it_bigger"
        android:textColor="@color/white"
        android:padding="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/main_build_it_bigger"
        android:layout_below="@id/main_library_app"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/main_xyz_reader"
        android:textColor="@color/white"
        android:padding="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/main_xyz_reader"
        android:layout_below="@id/main_build_it_bigger"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/main_capstone"
        android:theme="@style/ColorButtonCapstone"
        android:textColor="@color/white"
        android:padding="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/main_capstone"
        android:layout_below="@id/main_xyz_reader"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
